--- a/src/templates/_menu-islands.html
+++ b/src/templates/_menu-islands.html
@@ -32,6 +32,7 @@
     <a class="dropdown-item" href="/community/links/">Links</a>
     <a class="dropdown-item" href="/community/tools/">Tools</a>
     <a class="dropdown-item" href="/courses/">Online Courses</a>
+    <a class="dropdown-item" href="/multimedia/">Multimedia</a>
   </div>
 </li>
 
