--- a/src/templates/controlpanel/index.html
+++ b/src/templates/controlpanel/index.html
@@ -137,6 +137,20 @@
     </div>
   </section>
 
+  <section>
+    <h2>Videos</h2>
+    <div class="row">
+      <div class="col-md-3 mb-3">
+        <a class="card icon-card btn-card" href="/multimedia/upload/form/?type=31&next=/multimedia/upload/">
+          <div class="icon">
+            <i class="fal fa-fw fa-film"></i>
+          </div>
+          <div class="card-header">Upload Videos</div>
+        </a>
+      </div>
+    </div>
+  </section>
+
   {% if IS_DATA_PORTAL %}
     <section>
       <h2>Data management</h2>
