fixed some of the user's recommendation

--- a/src/templates/_menu-islands.html
+++ b/src/templates/_menu-islands.html
@@ -7,7 +7,7 @@
     <a class="dropdown-item" href="/about/what-is-island-metabolism/">What is Island Metabolism?</a>
     <a class="dropdown-item" href="/community/">Community</a>
     <a class="dropdown-item" href="/about/join/">Join Us</a>
-    <a class="dropdown-item" href="/about/subscribe/">Subscribe</a>
+    <a class="dropdown-item" href="/newsletter">Subscribe</a>
     <a class="dropdown-item" href="/about/contact/">Contact Us</a>
   </div>
 </li>
