--- a/src/templates/data/dashboard.html
+++ b/src/templates/data/dashboard.html
@@ -180,22 +180,21 @@
   <h2>"How To" Tutorials <i class="fal fa-video fa-fw"></i></h2>
   <div class="row">
     <div class="col-xl-3 col-md-6">
-      <a class="btn-icon" href="https://multimedia.metabolismofcities.org/videos/collection/754/">
+      <a class="btn-icon" href="https://multimedia.metabolismofcities.org/videos/33030/" target="_blank" rel="noopener noreferrer">
         <div class="title"><i class="fal fa-video fa-fw"></i> Data</div>
         <div class="text">Check out our instruction videos on how to upload any data for this island</div>
       </a>
     </div>
     <div class="col-xl-3 col-md-6">
-      <a class="btn-icon" href="https://www.youtube.com/embed/FkjvbUG59O8">
-        <div class="title"><i class="fal fa-video fa-fw"></i> Publications
-        </div>
+      <a class="btn-icon" href="https://www.youtube.com/embed/FkjvbUG59O8" target="_blank" rel="noopener noreferrer">
+        <div class="title"><i class="fal fa-video fa-fw"></i> Publications</div>
         <div class="text">
           Check out our instruction videos on how to upload a library publication for this island
         </div>
       </a>
     </div>
     <div class="col-xl-3 col-md-6">
-      <a class="btn-icon" href="https://multimedia.metabolismofcities.org/videos/collection/966/">
+      <a class="btn-icon" href="https://multimedia.metabolismofcities.org/videos/collection/966/" target="_blank" rel="noopener noreferrer">
         <div class="title"><i class="fal fa-video fa-fw"></i> Processing</div>
         <div class="text">
           Check out our instruction videos on how to process dataset, shapefiles, geospatial spreadsheets, and many more.
@@ -203,7 +202,7 @@
       </a>
     </div>
     <div class="col-xl-3 col-md-6">
-      <a class="btn-icon" href="https://education.metabolismofcities.org/courses/">
+      <a class="btn-icon" href="https://education.metabolismofcities.org/courses/" target="_blank" rel="noopener noreferrer">
         <div class="title"><i class="fal fa-chalkboard-teacher"></i> Online courses</div>
         <div class="text">
           Check out our online courses on how to upload your data and how we process and help you visualise your data.
