--- a/src/templates/hub/harvesting.space.html
+++ b/src/templates/hub/harvesting.space.html
@@ -95,8 +95,11 @@
       <i class="fa fa-fw fa-info-circle"></i>
       Instructions: make sure you watch the video tutorial on how to upload any data type
       <br>
-      <a href="https://multimedia.metabolismofcities.org/videos/collection/754/" class="btn btn-primary mt-3">
-        <i class="fa fa-video"></i> Instruction video on how to upload data</span>
+      <a href="https://multimedia.metabolismofcities.org/videos/collection/754/"
+         class="btn btn-primary mt-3"
+         target="_blank"
+         rel="noopener noreferrer">
+        <i class="fa fa-video"></i> Instruction video on how to upload data
       </a>
     </div>
   </section>
@@ -200,8 +203,11 @@
               <i class="fa fa-fw fa-info-circle"></i>
               Instructions: make sure you watch the video tutorial on how to upload the image
               <br>
-              <a href="https://multimedia.metabolismofcities.org/videos/36548/" class="btn btn-primary mt-3">
-                <i class="fa fa-video"></i> Instruction video on how to upload an image</span>
+              <a href="https://multimedia.metabolismofcities.org/videos/36548/"
+                class="btn btn-primary mt-3"
+                target="_blank"
+                rel="noopener noreferrer">
+                <i class="fa fa-video"></i> Instruction video on how to upload an image
               </a>
             </div>
             <a class="btn btn-default-basic" href="0/form/?inventory=true&amp;type=38&amp;next={{ request.get_full_path }}&amp;hide_tags=true">
