--- a/src/templates/islands/past_islands_visualisations.html
+++ b/src/templates/islands/past_islands_visualisations.html
@@ -76,18 +76,34 @@
             <i class="fa fa-fw fa-info-circle"></i>
             Link to tutorial videos and online courses
             <br>
-            <a href="https://multimedia.metabolismofcities.org/videos/33030/" class="btn btn-primary mt-3">
-              <i class="fa fa-video"></i> Instruction video on how to upload an MFA data</span>
+            <a href="https://multimedia.metabolismofcities.org/videos/33030/"
+                class="btn btn-primary mt-3"
+                target="_blank"
+                rel="noopener noreferrer">
+                <i class="fa fa-video"></i> Instruction video on how to upload an MFA data
             </a>
-            <a href="https://multimedia.metabolismofcities.org/videos/578418/" class="btn btn-primary mt-3">
-                <i class="fa fa-video"></i> Instruction video on how to process data</span>
+
+            <a href="https://multimedia.metabolismofcities.org/videos/578418/"
+                class="btn btn-primary mt-3"
+                target="_blank"
+                rel="noopener noreferrer">
+                <i class="fa fa-video"></i> Instruction video on how to process data
             </a>
+
             <br>
-            <a href="https://education.metabolismofcities.org/courses/data-and-urban-metabolism-data-collection/" class="btn btn-primary mt-3">
-                <i class="fa fa-video"></i> Data uploading online course</span>
+
+            <a href="https://education.metabolismofcities.org/courses/data-and-urban-metabolism-data-collection/"
+                class="btn btn-primary mt-3"
+                target="_blank"
+                rel="noopener noreferrer">
+                <i class="fa fa-video"></i> Data uploading online course
             </a>
-            <a href="https://education.metabolismofcities.org/courses/data-and-urban-metabolism-data-processing/" class="btn btn-primary mt-3">
-                <i class="fa fa-video"></i> Data processing online course</span>
+
+            <a href="https://education.metabolismofcities.org/courses/data-and-urban-metabolism-data-processing/"
+                class="btn btn-primary mt-3"
+                target="_blank"
+                rel="noopener noreferrer">
+                <i class="fa fa-video"></i> Data processing online course
             </a>
         </div>
     </section>
