--- a/src/templates/hub/harvesting.tag.html
+++ b/src/templates/hub/harvesting.tag.html
@@ -28,28 +28,37 @@
       Watch this video to understand more about {{ tag }}
       <br>
       {% if tag.parent_tag and tag.parent_tag|stringformat:"s" == "Layer 3: Infrastructure" or tag.parent_tag and tag.parent_tag|stringformat:"s" == "Layer 4: Stocks and flows" %}
-        <a id="instructionLink2" href="" class="btn btn-primary mt-3">
+        <a id="instructionLink2"
+            href=""
+            class="btn btn-primary mt-3"
+            target="_blank"
+            rel="noopener noreferrer">
           <i class="fa fa-video"></i> Instruction video about <span id="typeName2">{{ tag.parent_tag }}</span>
         </a>
+        
         <script>
           // Get the link and text elements
           var linkElement = document.getElementById("instructionLink2");
           var typeNameElement = document.getElementById("typeName2").innerHTML;
-  
+        
           // Define different URLs based on type.name
           var tutorialLinks = {
             "Layer 3: Infrastructure": "https://multimedia.metabolismofcities.org/videos/34666/",
             "Layer 4: Stocks and flows": "https://multimedia.metabolismofcities.org/videos/39160/",
           };
-  
+        
           // Set href dynamically based on type.name
           linkElement.href = tutorialLinks[typeNameElement] || "https://example.com/default-tutorial";
         </script>
-        <br>
+        <br>   
       {% endif %}
       {% with "4.01,4.02,4.03,4.04,4.05,4.06,3.01,3.03,3.04,3.07,3.09,3.31,2.1,2.2,2.3,2.4,2.5,2.6,2.7,1.6" as allowed_tags %}
         {% if tag|split_tag in allowed_tags|split_by_comma %}  
-          <a id="instructionLink" href="" class="btn btn-primary mt-3">
+          <a id="instructionLink"
+              href=""
+              class="btn btn-primary mt-3"
+              target="_blank"
+              rel="noopener noreferrer">
             <i class="fa fa-video"></i> Instruction video about <span id="typeName">{{ tag }}</span>
           </a>
           <script>
