--- a/src/templates/hub/processing.html
+++ b/src/templates/hub/processing.html
@@ -11,8 +11,11 @@
       <i class="fa fa-fw fa-info-circle"></i>
       Instructions: make sure you watch the video tutorial on how to process any data
       <br>
-      <a href="https://multimedia.metabolismofcities.org/videos/collection/966/" class="btn btn-primary mt-3">
-        <i class="fa fa-video"></i> Instruction video on how to process any data</span>
+      <a href="https://multimedia.metabolismofcities.org/videos/collection/966/"
+        class="btn btn-primary mt-3"
+        target="_blank"
+        rel="noopener noreferrer">
+        <i class="fa fa-video"></i> Instruction video on how to process any data
       </a>
     </div>
   </div>
