add a form to send email to request to become a data processor

--- a/src/templates/staf/review/_introduction.html
+++ b/src/templates/staf/review/_introduction.html
@@ -5,7 +5,7 @@
       Curation is one of the most important but challenging tasks. Anybody can upload a dataset, but we need YOUR help to ensure that information is properly processed, labelled, and only published when it should be published.
     </p>
 
-    <a class="btn btn-primary mb-2" href="/forum/581211/">
+    <a class="btn btn-primary mb-2" href="/data_processor_form/">
       <i class="fas fa-fw fa-user-plus"></i>
       Become a data processor
     </a>
