--- a/src/templates/controlpanel/index.html
+++ b/src/templates/controlpanel/index.html
@@ -35,6 +35,15 @@
     </div>
 
     <div class="col-md-3 mb-3">
+      <a class="card icon-card btn-card" href="users/admins/">
+        <div class="icon">
+          <i class="fal fa-fw fa-users"></i>
+        </div>
+        <div class="card-header">Administrators</div>
+      </a>
+    </div>
+
+    <div class="col-md-3 mb-3">
       <a class="card icon-card btn-card" href="newsletter/">
         <div class="icon">
           <i class="fal fa-fw fa-users"></i>
