--- a/src/templates/islands/index.html
+++ b/src/templates/islands/index.html
@@ -198,7 +198,7 @@
     <h2 class="text-center font-weight-bold my-4 ">Check out these instructions videos on how to contribute to our website</h2>
     <div class="row pt-4">
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card clickable-card" data-url="https://multimedia.metabolismofcities.org/videos/collection/754/">
+        <div class="card icon-card clickable-card" data-url="https://education.metabolismofcities.org/courses/data-and-urban-metabolism-data-collection/">
           <div class="icon bg-primary">
             <i class="fal fa-fw fa-upload text-light"></i>
           </div>
