--- a/src/templates/optamos/_base.html
+++ b/src/templates/optamos/_base.html
@@ -1,32 +1,77 @@
 {% load static %}
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OPTamos</title>
-    <link href="{% static "css/optamos.css" %}" rel="stylesheet">
-  </head>
-  <body>
+<html lang="en" class="h-full bg-gray-100">
 
-    <nav> 
-      <div class="container"> <a class="navbar-brand" href="#">OPTamos</a> 
-        <div class="collapse navbar-collapse" id="navbarsExample09"> 
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
-            <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#"><i class="fa fa-home"></i></a></li> 
-            <li class="nav-item"> <a class="nav-link" href="#">Projects</a> </li>  
-            <li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>  
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>OPTamos</title>
+  <link href="{% static "css/optamos.css" %}" rel="stylesheet">
+  <link class="favicon" rel="shortcut icon" sizes="126x126" href="/media/optamos/favicon.jpg">
+</head>
+
+<body class="h-full">
+  <div class="min-h-full">
+    <nav class="mainnav relative isolate z-10 shadow-sm">
+      <div class="bg-white py-5">
+        <div class="mx-auto max-w-7xl px-6 lg:px-8 z-10001 relative flex justify-between">
+          <ul class="{% if not request.user.is_authenticated %}opacity-30{% endif %}"> 
+            <li> 
+              <a class="nav-link active" aria-current="page" href="{% url "optamos:index" %}">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M341.8 72.6C329.5 61.2 310.5 61.2 298.3 72.6L74.3 280.6C64.7 289.6 61.5 303.5 66.3 315.7C71.1 327.9 82.8 336 96 336L112 336L112 512C112 547.3 140.7 576 176 576L464 576C499.3 576 528 547.3 528 512L528 336L544 336C557.2 336 569 327.9 573.8 315.7C578.6 303.5 575.4 289.5 565.8 280.6L341.8 72.6zM304 384L336 384C362.5 384 384 405.5 384 432L384 528L256 528L256 432C256 405.5 277.5 384 304 384z"/></svg>
+              </a>
+            </li> 
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">My Account</a></li>
           </ul>  
-          <a href="logout">Log out</a>
+          {% if request.user.is_authenticated %}
+            <a href="logout">Log out</a>
+          {% else %}
+            <a href="{% url "optamos:login" %}">Log in</a>
+          {% endif %}
         </div> 
       </div> 
     </nav>
 
-  <div class="container mt-3">
-    {% block content %}
-    {% endblock %}
+    <div class="bg-violet-800 pb-32 bg" style="background-image:url(/media/optamos/{{ bg }})">
+      <header class="py-10">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <h1 class="text-3xl font-bold tracking-tight text-white text-shadow-md text-shadow-stone-700">
+            OPTamos
+          </h1>
+          <h2 class="text-shadow-sm text-shadow-stone-700 text-white">
+            Options for Participatory Transformation and Management of Sustainable land use
+          </h2>
+        </div>
+      </header>
+    </div>
+
+    <main class="-mt-32">
+      <div class="mx-auto max-w-7xl px-4 pb-12 sm:px-6 lg:px-8">
+        <div class="rounded-lg bg-white px-5 py-6 shadow-sm sm:px-6 ">
+          <div class="flex gap-15 ml-10 mr-10">
+            <div class="flex-4">
+
+              {% if messages %}
+                <div class="top-message-box">
+                  {% for message in messages %}
+                    <div class="alert {{ message.tags }}" role="alert">
+                      {{ message|safe }}
+                    </div>
+                  {% endfor %}
+                </div>
+              {% endif %}
+
+              {% block content %}
+              {% endblock %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
   </div>
 
-  </body>
+</body>
+
 </html>
