--- a/src/templates/optamos/_base.html
+++ b/src/templates/optamos/_base.html
@@ -33,17 +33,19 @@
       </div> 
     </nav>
 
-    <div class="bg-violet-800 pb-32 bg" style="background-image:url(/media/optamos/{{ bg }})">
-      <header class="py-10">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-          <h1 class="text-3xl font-bold tracking-tight text-white text-shadow-md text-shadow-stone-700">
-            OPTamos
-          </h1>
-          <h2 class="text-shadow-sm text-shadow-stone-700 text-white">
-            Options for Participatory Transformation and Management of Sustainable land use
-          </h2>
-        </div>
-      </header>
+    <div class="bg-violet-800 bg" style="background-image:url(/media/optamos/{{ bg }})">
+      <div class="overlay pb-32">
+        <header class="py-10">
+          <hgroup class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <h1 class="text-3xl font-bold tracking-tight text-white text-shadow-md text-shadow-stone-700">
+              OPTamos
+            </h1>
+            <h2 class="text-shadow-sm text-shadow-stone-700 text-white">
+              Options for Participatory Transformation and Management of Sustainable land use
+            </h2>
+          </hgroup>
+        </header>
+      </div>
     </div>
 
     <main class="-mt-32">
