Project creation work

--- a/src/templates/optamos/_base.html
+++ b/src/templates/optamos/_base.html
@@ -74,6 +74,11 @@
 
   </div>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+{% block js %}
+
+{% endblock %}
+
 </body>
 
 </html>
