--- a/src/templates/optamos/project.html
+++ b/src/templates/optamos/project.html
@@ -2,7 +2,102 @@
 
 {% block content %}
 
-{{ info }}
-{{ info.goal }}
+<h1>{{ info }}</h1>
+
+<div>
+  <div>Goal:</div>
+  <span class="font-bold text-2xl">{{ info.goal }}</span>
+</div>
+
+<div class="flex mt-5">
+  <div class="flex-1 border-r border-gray-200">
+
+    <section id="criteria">
+      <h2>Criteria</h2>
+
+      {% if criteria %}
+      <ul>
+      {% for each in criteria %}
+        <li><a data-criteria="{{ each.id }}">{{ each }}</a></li>
+      {% endfor %}
+      </ul>
+      <a class="btn-blue btn-sm"><i class="fa fa-plus"></i> Add new</a>
+      {% else %}
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1" type="module"></script>
+        <button  command="show-modal" commandfor="dialog" class="relative block w-full rounded-lg border-2 border-dashed border-gray-300 p-12 text-center hover:border-gray-400 focus:outline-2 focus:outline-offset-2 focus:outline-indigo-600">
+              <span class="mt-2 block text-sm font-semibold text-gray-900">Define criteria</span>
+        </button>
+
+        <el-dialog>
+          <dialog id="dialog" aria-labelledby="dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
+            <el-dialog-backdrop class="fixed inset-0 bg-gray-500/75 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
+
+            <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
+              <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                  <div class="sm:flex sm:items-start">
+                    <div class="mx-auto flex size-12 shrink-0 items-center justify-center rounded-full bg-lime-100 sm:mx-0 sm:size-10">
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-lime-600">
+                        <path d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                    </div>
+                    <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                      <h3 id="dialog-title" class="text-base font-semibold text-gray-900">Deactivate account</h3>
+                      <div class="mt-2">
+                        <p class="text-sm text-gray-500">
+                          Enter your criteria below, each on a new line.
+                        </p>
+                        <textarea required name="criteria" placeholder="One-word criteria are best, e.g. 'Ecological', 'Social', or 'Cultural'"></textarea>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+                  <button type="button" command="close" commandfor="dialog" class="inline-flex w-full justify-center rounded-md bg-lime-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-lime-500 sm:ml-3 sm:w-auto">Save</button>
+                  <button type="button" command="close" commandfor="dialog" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs inset-ring inset-ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
+                </div>
+              </el-dialog-panel>
+            </div>
+          </dialog>
+        </el-dialog>
+
+      {% endif %}
+    </section>
+
+    <section class="mt-10" id="options">
+      <h2>Options</h2>
+      <table class="table table-striped mb-5">
+        <thead>
+          <tr>
+            <th>Option</th>
+            <th>Prio</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for each in info.options.all %}
+          <tr>
+            <td>{{ each }}</td>
+            <td>{{ each.priority }}%</td>
+            <td><a onclick="javascript:return confirm('Are you sure?')" class="btn btn-info" data-option="{{ each.id }}" data-action="delete"><i class="fa fa-trash"></i></a></td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      <a class="btn-blue btn-sm"><i class="fa fa-plus"></i> Add new</a>
+    </section>
+
+    <section class="mt-10" id="inconsistency">
+      <h2>Inconsistency Ratio</h2>
+      Current ratio: 30%
+    </section>
+
+  </div>
+  <div class="flex-2">
+
+  </div>
+</div>
+
+
 
 {% endblock %}
