--- a/src/templates/optamos/project.settings.html
+++ b/src/templates/optamos/project.settings.html
@@ -28,6 +28,24 @@
       </div>
 
       <div>
+        <div class="flex items-center justify-between">
+          <label for="goal" class="block text-sm/6 font-medium text-gray-900">Criteria</label>
+        </div>
+        <div class="mt-2">
+          <textarea required name="criteria" placeholder="Enter each on a new line; one-word criteria are best, e.g. 'Ecological', 'Social', or 'Cultural'"></textarea>
+        </div>
+      </div>
+
+      <section>
+        <div class="flex items-center justify-between">
+          <label class="block text-sm/6 font-medium text-gray-900">Options</label>
+        </div>
+        <div class="mt-2">
+          <input type="text" name="option" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-cyan-600 sm:text-sm/6" />
+        </div>
+      </section>
+
+      <div>
         <button type="submit" class="flex w-full justify-center btn-blue px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-600 cursor-pointer">Create project</button>
       </div>
     </form>
@@ -35,4 +53,20 @@
   </div>
 </div>
 
+{% endblock %}
+
+{% block js %}
+<script type="text/javascript">
+$(function(){
+  $("section").on("input", "input[name='option']", function() {
+    if ($(this).data("is-typed") !== true) {
+      var newDiv = $(this).closest("div").clone();
+      newDiv.find("input").val(""); // Clear the cloned input
+      $(this).closest("section").append(newDiv);
+      $(this).data("is-typed", true); // Mark this input as typed
+    }
+  }); 
+});
+</script>
+  
 {% endblock %}
