--- a/src/templates/optamos/project.settings.html
+++ b/src/templates/optamos/project.settings.html
@@ -23,7 +23,7 @@
           <label for="goal" class="block text-sm/6 font-medium text-gray-900">Project goal</label>
         </div>
         <div class="mt-2">
-          <input id="goal" type="text" name="goal" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-cyan-600 sm:text-sm/6" />
+          <input id="goal" type="text" name="goal" required />
         </div>
       </div>
 
@@ -32,7 +32,7 @@
           <label for="goal" class="block text-sm/6 font-medium text-gray-900">Criteria</label>
         </div>
         <div class="mt-2">
-          <textarea required name="criteria" placeholder="Enter each on a new line; one-word criteria are best, e.g. 'Ecological', 'Social', or 'Cultural'"></textarea>
+          <textarea class="h-32" name="criteria" placeholder="Enter each on a new line; one-word criteria are best, e.g. 'Ecological', 'Social', or 'Cultural'"></textarea>
         </div>
       </div>
 
@@ -41,7 +41,7 @@
           <label class="block text-sm/6 font-medium text-gray-900">Options</label>
         </div>
         <div class="mt-2">
-          <input type="text" name="option" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-cyan-600 sm:text-sm/6" />
+          <input type="text" name="option" />
         </div>
       </section>
 
