--- a/src/templates/optamos/_base.html
+++ b/src/templates/optamos/_base.html
@@ -8,6 +8,7 @@
   <title>OPTamos</title>
   <link href="{% static "css/optamos.css" %}" rel="stylesheet">
   <link class="favicon" rel="shortcut icon" sizes="126x126" href="/media/optamos/favicon.jpg">
+  {% block css %}{% endblock %}
 </head>
 
 <body class="h-full">
@@ -19,6 +20,7 @@
             <li> 
               <a class="nav-link active" aria-current="page" href="{% url "optamos:index" %}">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M341.8 72.6C329.5 61.2 310.5 61.2 298.3 72.6L74.3 280.6C64.7 289.6 61.5 303.5 66.3 315.7C71.1 327.9 82.8 336 96 336L112 336L112 512C112 547.3 140.7 576 176 576L464 576C499.3 576 528 547.3 528 512L528 336L544 336C557.2 336 569 327.9 573.8 315.7C578.6 303.5 575.4 289.5 565.8 280.6L341.8 72.6zM304 384L336 384C362.5 384 384 405.5 384 432L384 528L256 528L256 432C256 405.5 277.5 384 304 384z"/></svg>
+                OPTamos
               </a>
             </li> 
             <li><a href="#">Projects</a></li>
@@ -38,10 +40,10 @@
         <header class="py-10">
           <hgroup class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <h1 class="text-3xl font-bold tracking-tight text-white text-shadow-md text-shadow-stone-700">
-              OPTamos
+              {{ project }}
             </h1>
             <h2 class="text-shadow-sm text-shadow-stone-700 text-white">
-              Options for Participatory Transformation and Management of Sustainable land use
+            {{ project.goal }}
             </h2>
           </hgroup>
         </header>
@@ -50,7 +52,7 @@
 
     <main class="-mt-32">
       <div class="mx-auto max-w-7xl px-4 pb-12 sm:px-6 lg:px-8">
-        <div class="rounded-lg bg-white px-5 py-6 shadow-sm sm:px-6 ">
+        <div class="rounded-lg bg-white {% if not remove_padding_main_container %}px-5 py-6 sm:px-6{% endif %} shadow-sm">
           <div class="flex gap-15 ml-10 mr-10">
             <div class="flex-4">
 
